--- a/index.html
+++ b/index.html
@@ -92,7 +92,8 @@
                 <li>Frequentist Statistics</li>
                 <li>Bayesian Statistics</li>
                 <li>Multivariate Testing</li>
-                <li>Weaknesses and Considerations in A/B Tests</li>
+                <li>Faults in A/B Tests</li>
+                <li>Implementation</li>
             </ol>
             <div class="slide-footer-left">
                 <p class="footer-text">Introduction</p>
@@ -564,14 +565,47 @@
         <section
                 data-transition="fade-in">
             <h2>The Boring Distribution</h2>
+
+            <p><em>a.k.a &ldquo;Bell Curve&rdquo;, Gaussian Distribution</em></p>
+            <span class="math-formula">$$f(x) = \phi(z) = \frac{1}{\sigma \sqrt{2 \pi } }e^{\frac{-(x - \mu)^2}{2\sigma^2}}$$</span>
+
+            <ul class="fragment">
+                <li>Defined by mean and standard deviation \(N(\mu,\sigma^2)\)</li>
+                <li>Curve is symmetrical, more data at center vs. edges</li>
+                <li>Mean = Median = Mode</li>
+                <li>Don't assume everything is normally distributed</li>
+            </ul>
+
         </section>
         <section
                 data-transition="fade-in">
             <h2>Standard Z</h2>
+            <p><em>A normal distribution where \(\mu\ = 0\), \(\sigma = 1\), a.k.a. \(N(0,1)\)</em></p>
+            <span class="math-formula">$$Z = \frac{X -  \mu }{ \sigma }$$</span>
+            <ul class="fragment">
+                <li>If \(X=1\), then it is 1 standard deviation from the mean</li>
+                <li>pdf: \(f(z) = \phi(z) = 1/2\)</li>
+                <li>\(P(-1 \le Z \le 1) \approx 0.6827\)</li>
+                <li>\(P(-2 \le Z \le 2) \approx 0.9545\)</li>
+                <li>\(P(-3 \le Z \le 3) \approx 0.9973\)</li>
+            </ul>
+            <aside class="notes">
+                <ul>
+                    <li>Draw out the percentages!</li>
+                    <li>The probability that Z is between -1 and 1 is 68%</li>
+                </ul>
+            </aside>
         </section>
         <section
                 data-transition="fade-in">
             <h2>Expected Value of Continuous Distributions</h2>
+            <p><em>Expected Value measures central tendency</em></p>
+            <span class="math-formula">$$E(X) =  \int_a^b xf(x)dx$$</span>
+            <div class="fragment">
+                <p>Expected Value of a standard z distribution</p>
+
+                <span class="math-formula">$$E(z) = \phi(z) = \frac{1}{ \sqrt{2 \pi } }e^{-z^2/2} \Big|_{-\infty}^{\infty} = 0$$</span>
+            </div>
         </section>
         <section
                 data-transition="fade-in">
@@ -617,6 +651,77 @@
                 * **Parameter estimation** - some value that determines the properties of the distribution, such as \\(\mu\\) or \\(\sigma\\)
                 * **Data Prediction** - use information about sample to predict a random selection
                 * **Model comparison** - selecting a model which best explains the observed data, something that postulates the relationship between factors and the data
+            </div>
+            <div class="slide-footer-left">
+                <p class="footer-text">1. Probability & Statistics</p>
+            </div>
+        </section>
+        <section
+                data-transition="fade-in">
+            <div>
+                <h2>Central Limit Theorem</h2>
+
+                <p><em>Without it, we can't make math happen!</em></p>
+
+                <span class="math-formula">$$\lim_{n \rightarrow \infty} P(| \overline{X} - \mu | < a) = 1$$</span>
+
+                <ul>
+                    <li>The bigger the sample, the closer the mean and variance of the sample gets to the population</li>
+                    <li>The means of many samples is a normal distribution</li>
+                    <li>The means of those means approximates the mean of the population</li>
+                </ul>
+            </div>
+            <div class="slide-footer-left">
+                <p class="footer-text">1. Probability & Statistics</p>
+            </div>
+            <aside class="notes">
+                <ul>
+                    <li>The normal distribution just doesn't happen everywhere, contrary to what we think</li>
+                    <li>Experimentation is what makes the normal distribution</li>
+                </ul>
+            </aside>
+        </section>
+        <section
+                data-transition="fade-in">
+            <div>
+                <h2>Sample vs Population</h2>
+
+                <ul>
+                    <li>Let \(S_n\) the the sum of \(x_1, x_2, ..., x_n\) random variables</li>
+                    <li>Each has a mean \(\mu\) and a standard deviation \(\sigma\).</li>
+                    <li>Then the weighted average of the random variables is:</li>
+                </ul>
+                <span class="math-formula">$$\overline{X}_{n} = \frac{S_{n}}{n} = \frac{X_{1} + ... + X_{n}}{n} =  \big(\sum_{i=1}^nX_{i}\big)/n$$</span>
+
+            </div>
+            <div class="slide-footer-left">
+                <p class="footer-text">1. Probability & Statistics</p>
+            </div>
+        </section>
+        <section
+                data-transition="fade-in">
+            <div>
+                <h2>Sample Statistics</h2>
+
+                <table>
+                    <tr>
+                        <td>Mean</td>
+                        <td>\(E( \overline{X}_{n}) =\mu\)</td>
+                        <td>\(E(S_{n}) = n\mu\)</td>
+                    </tr>
+                    <tr>
+                        <td>Variance</td>
+                        <td>\(Var( \overline{X}_{n}) =\frac{\sigma^2}{n}\)</td>
+                        <td>\(Var(S_{n}) = n\sigma^2\)</td>
+                    </tr>
+                    <tr>
+                        <td>S.D.</td>
+                        <td>\(\sigma_{\overline{X}_{n}} =\frac{\sigma}{\sqrt{n}}\)</td>
+                        <td>\(\sigma_{S_{n}} =\sqrt{n}\sigma\)</td>
+                    </tr>
+                </table>
+
+                <p class="fragment">As \(n\) gets larger, the standard deviation gets smaller</p>
             </div>
             <div class="slide-footer-left">
                 <p class="footer-text">1. Probability & Statistics</p>
@@ -670,8 +775,22 @@
                 <p><em>A coin is flipped 100 times and it lands heads 60 times.</em></p>
 
                 <ul>
-                    <li>Bayesian: What is the probability of landing more than 60 heads \(P(X > 59)\)?</li>
-                    <li>Frequentist: Is the coin fair?</li>
+                    <li><strong>Frequentist</strong>: What's the probability of getting 60 or more heads \(P(X > 59)\) if the coin is fair?</li>
+                    <li><strong>Bayesian</strong>: Is the coin fair?</li>
+                </ul>
+            </div>
+            <div class="slide-footer-left">
+                <p class="footer-text">1. Probability & Statistics</p>
+            </div>
+        </section>
+        <section
+                data-transition="fade-in">
+            <div>
+                <h2>What about A/B Testing?</h2>
+
+                <ul>
+                    <li><strong>Frequentist</strong>: Do the results of the new version support rejecting the old version?</li>
+                    <li><strong>Bayesian</strong>: What's the probability of the new version being better than the old version?</li>
                 </ul>
             </div>
             <div class="slide-footer-left">
@@ -715,7 +834,7 @@
         <section
                 data-transition="fade-in">
             <h2>R. A. Fisher</h2>
-            <img src="custom/media/fisher.jpg" style="height: 55vh;" />
+            <img src="custom/media/fisher.jpg" style="height: 45vh;" />
             <p>A guy wearing a college professor costume</p>
             <div class="slide-footer-left">
                 <p class="footer-text">2. Frequentist Statistics</p>
@@ -723,21 +842,15 @@
         </section>
         <section
                 data-transition="fade-in">
-            <h2>Central Limit Theorem</h2>
-            <div class="slide-footer-left">
-                <p class="footer-text">2. Frequentist Statistics</p>
-            </div>
-        </section>
-        <section
-                data-transition="fade-in">
-            <div data-markdown>
-                ## Null Hypothesis Significance Testing
+            <h2>Null Hypothesis Significance Testing</h2>
 
-                * **Null Hypothesis** \\(H_0\\) - Currently accepted value for a parameter.
-                * **Alternate Hypothesis** \\(H_A\\) - Claim to be tested
-                * \\(H_0\\) and \\(H_A\\) are opposites. They must represent all possible answers.
-                * **Neyman-Pearson Paradigm** - If the data is well outside the what is expected under the null hypothesis, then reject the null hypothesis.
-            </div>
+            <ul>
+                <li class="fragment"><strong>Null Hypothesis</strong> \(H_0\) - Currently accepted value for a parameter.</li>
+                <li class="fragment"><strong>Alternate Hypothesis</strong> \(H_A\) - Claim to be tested</li>
+                <li class="fragment">\(H_0\) and \(H_A\) are opposites. They must represent all possible answers.</li>
+                <li class="fragment"><strong>Neyman-Pearson Paradigm</strong> - If the data is well outside the what is expected under the null hypothesis, then reject the null hypothesis.</li>
+            </ul>
+            </ul>
             <div class="slide-footer-left">
                 <p class="footer-text">2. Frequentist Statistics</p>
             </div>
@@ -768,10 +881,71 @@
                 * You don't have to prove innocence (aka null hypothesis)
             </aside>
         </section>
+        <section
+                data-transition="fade-in">
+            <div>
+                <h2>Standardization</h2>
+                <p><em>Map the sample to the Z distribution to math easier</em></p>
+                <span class="math-formula">$$z = \frac{ \overline{x} -  \mu_{0}}{  \sigma/\sqrt{n} }$$</span>
+
+            </div>
+            <div class="slide-footer-left">
+                <p class="footer-text">1. Probability & Statistics</p>
+            </div>
         </section>
         <section
                 data-transition="fade-in">
             <h2>Critical Value</h2>
+            <p><em>The probability that the result will within z-values, a.k.a. \(\sigma\)</em></p>
+            <table>
+                <tr>
+                    <th>Probability %</th>
+                    <th>Critical Value</th>
+                    <th>\(\alpha/2\)</th>
+                </tr>
+                <tr>
+                    <td>68.27%</td>
+                    <td>1.000</td>
+                    <td>\(z_{0.1}\)</td>
+                </tr>
+                <tr>
+                    <td>80%</td>
+                    <td>1.000</td>
+                    <td>\(z_{0.159}\)</td>
+                </tr>
+                <tr>
+                    <td>90%</td>
+                    <td>1.282</td>
+                    <td>\(z_{0.05}\)</td>
+                </tr>
+                <tr>
+                    <td>95%</td>
+                    <td>1.960</td>
+                    <td>\(z_{0.025}\)</td>
+                </tr>
+                <tr>
+                    <td>98%</td>
+                    <td>2.326</td>
+                    <td>\(z_{0.01}\)</td>
+                </tr>
+            </table>
+            <div class="slide-footer-left">
+                <p class="footer-text">2. Frequentist Statistics</p>
+            </div>
+        </section>
+        <section
+                data-transition="fade-in">
+            <h2>Finding Critical Value</h2>
+
+            <pre><code data-trim data-noescape>
+                    from scipy.stats import norm
+
+                    zscore_input = 'What is the z-score? '
+                    zscore = input(zscore_input)
+
+                    two_tail = 2 * (1 - norm.cdf(zscore))
+                    print('2-tail: {0}'.format(two_tail))
+                </code></pre>
             <div class="slide-footer-left">
                 <p class="footer-text">2. Frequentist Statistics</p>
             </div>
@@ -792,21 +966,22 @@
         </section>
         <section
                 data-transition="fade-in">
-            <h2>Margin of Error</h2>
+            <h2>Modeling a Test</h2>
             <div class="slide-footer-left">
                 <p class="footer-text">2. Frequentist Statistics</p>
             </div>
         </section>
         <section
                 data-transition="fade-in">
-            <h2>Confidence Intervals</h2>
+            <h2>One Tail or Two Tails?</h2>
             <div class="slide-footer-left">
                 <p class="footer-text">2. Frequentist Statistics</p>
             </div>
         </section>
         <section
                 data-transition="fade-in">
-            <h2>Modeling a Hypothesis Test</h2>
+            <h2>WTF is a <span style="text-transform: lowercase;">p</span>-value?</h2>
+            <p><em>How rare is the result if the null hypothesis is true?</em></p>
             <div class="slide-footer-left">
                 <p class="footer-text">2. Frequentist Statistics</p>
             </div>
@@ -821,6 +996,20 @@
         <section
                 data-transition="fade-in">
             <h2>Testing a population mean</h2>
+            <div class="slide-footer-left">
+                <p class="footer-text">2. Frequentist Statistics</p>
+            </div>
+        </section>
+        <section
+                data-transition="fade-in">
+            <h2>Margin of Error</h2>
+            <div class="slide-footer-left">
+                <p class="footer-text">2. Frequentist Statistics</p>
+            </div>
+        </section>
+        <section
+                data-transition="fade-in">
+            <h2>Confidence Intervals</h2>
             <div class="slide-footer-left">
                 <p class="footer-text">2. Frequentist Statistics</p>
             </div>
@@ -882,9 +1071,9 @@
 
                 data-background-image="custom/media/explosions.jpg"
                 data-transition="fade-in">
-            <h2 style="color: #FFF;background-color: rgba(0,0,0,0.8);display: inline;padding: 0 1%;">Michael Bay</h2><br/>
+            <h2 class="shadow-text">Michael Bay</h2><br/>
             <img src="custom/media/michael-bay.jpg" style="height: 45vh" /><br />
-            <p style="color: #FFF;background-color: rgba(0,0,0,0.8);display: inline;padding: 0 1%;font-size: 150%;"><em>S*** just got real.</em></p>
+            <p class="shadow-text"><em>Statistics just got real.</em></p>
             <div class="slide-footer-left">
                 <p class="footer-text">3. Bayesian Statistics</p>
             </div>
@@ -979,6 +1168,61 @@
             </div>
             <div class="slide-footer-left">
                 <p class="footer-text">3. Bayesian Statistics</p>
+            </div>
+        </section>
+        <section
+                data-transition="fade-in">
+            <div>
+                <h2>Markov Chain Monte Carlo</h2>
+                <p><em>Ain't nobody got time to solve integrals.</em></p>
+            </div>
+            <div class="slide-footer-left">
+                <p class="footer-text">3. Bayesian Statistics</p>
+            </div>
+        </section>
+        <section
+                data-transition="fade-in">
+            <div>
+                <h1>Multivariate Testing</h1>
+            </div>
+            <div class="slide-footer-left">
+                <p class="footer-text">4. Multivariate Testing</p>
+            </div>
+        </section>
+        <section
+                data-transition="fade-in">
+            <div>
+                <h1>Faults in A/B Tests</h1>
+            </div>
+            <div class="slide-footer-left">
+                <p class="footer-text">4. Faults in A/B Tests</p>
+            </div>
+        </section>
+        <section
+                data-transition="fade-in">
+            <div>
+                <h1>Implementation</h1>
+            </div>
+            <div class="slide-footer-left">
+                <p class="footer-text">4. Implementation</p>
+            </div>
+        </section>
+        <section
+                data-transition="fade-in">
+            <div>
+                <h2>R vs. Python</h2>
+            </div>
+            <div class="slide-footer-left">
+                <p class="footer-text">4. Implementation</p>
+            </div>
+        </section>
+        <section
+                data-transition="fade-in">
+            <div>
+                <h2>Allocation</h2>
+            </div>
+            <div class="slide-footer-left">
+                <p class="footer-text">4. Implementation</p>
             </div>
         </section>
     </div>
